--- a/pages/formacion-academica.html
+++ b/pages/formacion-academica.html
@@ -206,7 +206,7 @@
   </div>
 
   <div class="formacion-malla-descarga">
-    <a href="#" class="boton-descarga">
+    <a href="../documents/Malla Curricular - Obstetricia UNICA.pdf" class="boton-descarga">
       Descargar Malla Curricular (PDF)
     </a>
   </div>
@@ -369,3 +369,4 @@
 <script src="../assets/js/main.js"></script>
 </body>
 </html>
+
